welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:5: error: not found: value avancer
def faireV () {avancer(2) ; marqueSol() ; avance() ; gauche() ; avance() ; marqueSol() ; recule() ; droite() ; avance() ; marqueSol() ; avance(2) ; gauche() ;
               ^